--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -1,131 +1,144 @@
-/* styles for my website */
-
+/* Global Styles */
 * {
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background:beige;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    background: #f5ebe0;
+    font-family: 'Verdana', 'Geneva', 'Tahoma', sans-serif;
 }
 
-.current {
-    color:red;
-}
-
+/* Navigation Styles */
 header {
-    background:yellow;
-  padding:20px 0;
+    background: #f8f1cc;
+    padding: 20px 0;
 }
 
 .inner-header {
-  max-width:1200px;
-margin:0px auto;
-
-overflow:hidden;
+    max-width: 1200px;
+    margin: 0 auto;
+    overflow: hidden;
 }
 
 #logo {
-    width:200px;
-    float:left;
+    width: 200px;
+    float: left;
 }
 
 nav ul {
-    float:right;
-    margin-top:30px;
+    float: right;
+    margin-top: 30px;
     list-style-type: none;
 }
 
-nav li  {
-    float:left;
-    margin-left:30px;
+nav li {
+    float: left;
+    margin-left: 20px;
+    list-style-type: none;
 }
 
 nav a {
-    text-decoration:none;
+    text-decoration: none;
+    color: #333;
 }
+
+aside ul {
+    list-style-type: none;
+    margin: 0; 
+    padding: 0; 
+}
+
+aside li {
+    margin: 8px 0; 
+}
+
+/* Wrapper Styles */
 #wrapper {
-max-width:1200px;
-margin:20px auto;
-clear:both;
-overflow:hidden;
-
+    max-width: 1200px;
+    margin: 20px auto;
+    clear: both;
+    overflow: hidden;
 }
 
+/* Hero Section Styles */
 #hero {
-
-background:red;
-margin-bottom:20px;
-
-
+    /* background: #ff4500; */
+    margin-bottom: 20px;
 }
 
+/* Main Content Styles */
 main {
-width:62%;
-
-background:lightblue;
-float:left;
-
+    border-radius: 3px;
+    width: 60%;
+    background: #d5bdaf;
+    float: left;
+    padding: 20px;
 }
 
+/* Sidebar Styles */
 aside {
-width:35%;
-
-background:lightsalmon;
-float:right;
-
+    border-radius: 3px;
+    width: 35%;
+    background: #d5bdaf;
+    float: right;
+    padding: 40px;
 }
 
+/* Footer Styles */
 footer {
-    height:60px;
+    height: 60px;
     line-height: 60px;
-    background:#ddd;
-    clear:both;
+    background: #e3d5ca;
+    clear: both;
 }
 
 footer ul {
-    display:flex;
+    display: flex;
     justify-content: center;
     list-style-type: none;
 }
 
 footer li {
-     justify-content: center;
-     margin:0 15px;
+    margin: 0 15px;
 }
 
+/* Image Styles */
 img {
-    max-width:100%;
+    max-width: 100%;
 }
 
-
-/* typography */
-
+/* Typography Styles */
 p {
-    margin-bottom:20px;
-    line-height:1.4;
+    margin-bottom: 20px;
+    line-height: 1.4;
+    color: #333;
 }
 
 h1 {
-    font-size:2.5em;
+    font-size: 2.5em;
+    margin-bottom: 10px;
+    font-family: 'Playfair Display', serif;
+    color: #333;
 }
 
 h2 {
-    font-size:2em;
+    font-size: 1.8em;
+    margin-bottom: 10px;
+    font-family: 'Playfair Display', serif;
+    color: #333;
 }
 
 h3 {
-    font-size:1.5em;
+    font-size: 1.5em;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: 'Playfair Display', serif;
+    color: #333;
 }
 
-h1, h2, h3 {
-    margin-bottom:10px;
-    font-family:playfair, serif;
-}
-
+/* Additional Styles */
 .color {
-    color:red;
-    color:orange;
+    color: #ff4500;
 }
