--- a/weeks/week4/css/form.css
+++ b/weeks/week4/css/form.css
@@ -81,5 +81,17 @@ span.hot {
     color: firebrick;
 }
 
+.box p {
+    margin: 20px 0; 
+}
 
+.box ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.box ul li {
+    margin-bottom: 5px;
+}
 
