--- a/weeks/week4/css/form.css
+++ b/weeks/week4/css/form.css
@@ -11,6 +11,7 @@ margin: 20px;
 
 p {
     text-align: center;
+    margin-top: 10px;
 }
 
 a {
@@ -25,7 +26,7 @@ a {
 .error {
     color: red;
     font-style: italic;
-    font-size: 9em;
+    font-size: 25px;
     margin-top: 10px;
 }
 
