--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@ body {
     background: #FAF0E6;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+header {
+    max-width: 1200px;
+    margin: 20px auto;
+}
 
 #wrapper {
     max-width: 1200px;
@@ -16,6 +20,24 @@ body {
 
 a {
     color: rgb(120, 32, 178);
+}
+
+.may-main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.php-logo {
+    float: left;
+    width: 120px;
+    height: auto;
+    margin-right: 20px;
+}
+
+h1 {
+    float: right;
+    margin-top: 20;
 }
 
 h1 a {
