Login for week10 but in week9 folder

--- a/weeks/week9/css/styles.css
+++ b/weeks/week9/css/styles.css
@@ -152,5 +152,10 @@ figcaption {
     font-style: italic;
 }
 
-
+.error {
+    color: #d9534f;
+    font-style: italic;
+    text-align: center;
+    margin: 10px 0;
+}
 
