--- a/final/css/login.css
+++ b/final/css/login.css
@@ -11,6 +11,7 @@ body {
     background-color: #e9e9e9;
     font-size: 16px;
     line-height: 1.6;
+    padding-bottom: 80px;
 }
 
 /* Centering the main content wrapper */
@@ -100,4 +101,44 @@ button[type="button"] {
 /* Add some spacing between form and footer */
 form + footer {
     margin-top: 20px;
+}
+
+/* error */
+.error {
+    color: red;
+}
+
+/* footer */
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px; /* Footer height */
+    line-height: 60px;
+    background: #f2f2f2;
+    text-align: center;
+    z-index: 1000; /* Ensures the footer stays above other content */
+    /* Removed the 'clear: both;' as it's not necessary with position: fixed; */
+}
+
+#inner-footer {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    height: 100%; /* Take the full height of the footer */
+}
+
+footer ul {
+    display: inline-block;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+footer li {
+    display: inline;
+    margin: 0 15px;
+    color: #333;
+    font-size: 14px;
 }
